# AndroidStudy

./: .gitignore  README.md  build.gradle  config.gradle  gradle.properties  screenMatch.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  frosted_glass.cpp
app/src/main/res/drawable/: dialog_background.xml  edit_text_background.xml  ripple_button.xml
app/src/main/res/layout/: activity_a.xml  activity_applock.xml  activity_audio_wave.xml  activity_b.xml  activity_glass.xml  activity_jetpack.xml  activity_main.xml  activity_page.xml  activity_pattern_lock.xml  activity_registration.xml  custom_permission_dialog.xml  dialog_permission_item.xml  fragment_applock.xml  fragment_first.xml  fragment_second.xml  item_product.xml  layout_applock.xml  layout_calculate_fragment.xml  layout_constraint_activity.xml  layout_figma_auto_ai_code.xml  layout_pattern_dialog.xml  layout_vlayout_child_fragment.xml  vlayout_fragment.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values-sw1024dp/: dimens.xml
app/src/main/res/values-sw1280dp/: dimens.xml
app/src/main/res/values-sw1365dp/: dimens.xml
architecturemodule/: build.gradle.kts
base-library/: build.gradle
base-library/src/main/: AndroidManifest.xml
base-library/src/main/assets/: logback.xml
buildSrc/: build.gradle
dag-task-flow/: build.gradle
featuretest/: build.gradle
network/: build.gradle
openCVLibrary410/: build.gradle
router/: build.gradle
router-compiler/: build.gradle
(+318 files in other folders)
